APPSECTOOLS-35279 Sec Onboard: Code Analysis Onboarding

--- a/.security_config/security_config.yaml
+++ b/.security_config/security_config.yaml
@@ -5,8 +5,8 @@
 #####################
 # CHANGE LOG
 #####################
-# (re)adding code analysis service webhook: seeking approval on pr [placeholder]
-# (re)adding code analysis service ac svc-secapi-appsec: seeking approval on pr [placeholder1]
+# (re)adding code analysis service webhook: seeking approval on pr [https://api.github.com/repos/peakon/swc-node/pulls/29]
+# (re)adding code analysis service ac svc-secapi-appsec: seeking approval on pr [https://api.github.com/repos/peakon/swc-node/pulls/29]
 
 #####################
 # SLACK CONFIGURATION
